--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -18,7 +18,7 @@
 \Reftrue
 \Toctrue
 
-\iftrue
+\iffalse
 	% to show labels
 	\ShowLabelstrue \advance\hoffset-1cm
 \else
@@ -26,6 +26,12 @@
 \fi
 
 \def\pmt#1{\hbox{\tt #1}}
+
+\def\caption#1{%
+	\vskip\baselineskip
+	\em{#1}%
+	\vskip\baselineskip
+}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -104,7 +110,7 @@
 \DefAbb{TPE}{Two Photon Exchange}{An approximation in QED.}
 \DefAbb{WY}{West-Yennie}{Refers to the Coulomb-interference formula Eq.~\ref{el phase WY}.}
 
-%\PrintAbbreviations
+\PrintAbbreviations
 
 \EndText
 
